--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           url: 'https://ntfy.sh'
           topic: '${{ secrets.NTFY_TOPIC }}'
-          details: Workflow has been successfully completed!
+          details: 'Workflow has been successfully completed!'
       - name: ntfy-failed-notifications
         uses: niniyas/ntfy-action@master
         if: failure()
@@ -63,4 +63,4 @@ jobs:
           url: 'https://ntfy.sh'
           topic: '${{ secrets.NTFY_TOPIC }}'
           priority: 5
-          details: Workflow has failed! {{ secrets.GITHUB_REPOSITORY }}
+          details: 'Workflow has failed! {{ secrets.GITHUB_REPOSITORY }}'
