--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -48,19 +48,20 @@ jobs:
         uses: actions/deploy-pages@v2
   ntfy:
     runs-on: ubuntu-latest
+    needs: deploy
     steps:
       - name: ntfy-success-notifications
         uses: niniyas/ntfy-action@master
         if: success()
         with:
-          url: 'https://ntfy.sh'
-          topic: '${{ secrets.NTFY_TOPIC }}'
+          url: 'https://ntfy.sh/'
+          topic: 'CaptainDragonflyBot-TopicRelease001'
           details: 'Workflow has been successfully completed!'
       - name: ntfy-failed-notifications
         uses: niniyas/ntfy-action@master
         if: failure()
         with:
-          url: 'https://ntfy.sh'
-          topic: '${{ secrets.NTFY_TOPIC }}'
+          url: 'https://ntfy.sh/'
+          topic: 'CaptainDragonflyBot-TopicRelease001'
           priority: 5
           details: 'Workflow has failed! {{ secrets.GITHUB_REPOSITORY }}'
