--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -55,13 +55,13 @@ jobs:
         if: success()
         with:
           url: 'https://ntfy.sh/'
-          topic: '${{ secrets.NTFY_TOPIC }}'
+          topic: 'CaptainDragonflyBot-TopicRelease001'
           details: 'Workflow has been successfully completed!'
       - name: ntfy-failed-notifications
         uses: niniyas/ntfy-action@master
         if: failure()
         with:
           url: 'https://ntfy.sh/'
-          topic: '${{ secrets.NTFY_TOPIC }}'
+          topic: 'CaptainDragonflyBot-TopicRelease001'
           priority: 5
           details: 'Workflow has failed! ${{ secrets.GITHUB_REPOSITORY }}'
