--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -127,6 +127,9 @@ footer:
         Attribution 4.0 International:
             icon: fab fa-creative-commons-by
             url: https://creativecommons.org/licenses/by/4.0/
+        鄂ICP备2022011867号-1:
+            # icon: fab fa-creative-commons-by
+            url: http://www.beian.miit.gov.cn/
         # Download on GitHub:
         #     icon: fab fa-github
         #     url: https://github.com/ppoffice/hexo-theme-icarus
