提交备案号

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -129,7 +129,7 @@ footer:
             url: https://creativecommons.org/licenses/by/4.0/
         鄂ICP备2022011867号-1:
             # icon: fab fa-creative-commons-by
-            url: http://www.beian.miit.gov.cn/
+            url: https://beian.miit.gov.cn/
         # Download on GitHub:
         #     icon: fab fa-github
         #     url: https://github.com/ppoffice/hexo-theme-icarus
