--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -105,11 +105,11 @@ head:
 navbar:
     # Navigation menu items
     menu:
-        首页: /
+        关于我: /about
+        # 首页: /
         归档: /archives
         分类: /categories
         标签: /tags
-        # About: /about
     # Links to be shown on the right of the navigation bar
     # links:
     #     Download on GitHub:
